Pages deploy to Tomcat with working link between them

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
   <p>Hello</p>
-  <a href="\Pages\stock.html">View products in stock</a>
+  <a href="stock.html">View products in stock</a>
   </body>
 </html>
