--- a/Frontend/stock.html
+++ b/Frontend/stock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
-    <script src="Scripts/Controller/StockController.js"></script>
+    <script type="module" src="Scripts/Controller/StockController.js"></script>
 </head>
 <body>
     <h1>Stock</h1>
