Data is retrieved from the database and a table is generated on the webpage

--- a/Frontend/stock.html
+++ b/Frontend/stock.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
+    <link rel="stylesheet" type="text/css" href="Styles/style.css"/>
+    <script type="module" src="Scripts/Model/Product.js"></script>
     <script type="module" src="Scripts/Controller/StockController.js"></script>
 </head>
 <body>
