--- a/Frontend/stock.html
+++ b/Frontend/stock.html
@@ -10,5 +10,11 @@
 </head>
 <body>
     <h1>Stock</h1>
+    <div class="table-container">
+    <label for="searchbox">Search</label>
+    <input type="text" id="searchbox">
+    <div id="tablediv"></div>
+    </div>
+</div>
 </body>
 </html>
