--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="Styles\login.css">
 </head>
 <body>
+    <div class="container">
     <form id="loginform">
-        <label for="username">Username</label><input type="email" name="username" id="username"> <br>
-        <label for="password">Password</label><input type="text" name="password" id="password"> <br>
+        <label for="username">Username</label> <br>
+        <input type="email" name="username" placeholder="Enter your username" id="username"><br>
+        <label for="password">Password</label> <br>
+        <input type="password" name="password" placeholder="Enter your password" id="password"><br>
         <input type="button" value="login" id="login">
         <label id="messagelabel"></label>
     </form>
+    </div>
     <script>
         function login() {
         let formData = new FormData(document.querySelector("#loginform"))
