Improved style and layout stock page

--- a/Frontend/stock.html
+++ b/Frontend/stock.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
-    <link rel="stylesheet" type="text/css" href="Styles/style.css"/>
+    <link rel="stylesheet" type="text/css" href="Styles/stock.css"/>
     <script type="module" src="Scripts/Model/Product.js"></script>
     <script type="module" src="Scripts/Controller/StockController.js"></script>
 </head>
 <body>
-    <h1>Stock</h1>
     <div class="table-container">
+    <h3>Products in stock</h3>
     <label for="searchbox">Search</label>
     <input type="text" id="searchbox">
     <div id="tablediv"></div>
