--- a/Frontend/homepage.html
+++ b/Frontend/homepage.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Styles\homepage.css">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-  <p>Hello</p>
-  <a href="stock.html">View products in stock</a>
+    <div class="container">  
+      <button onclick="document.location='stock.html'">View products in stock</button>
+      <button onclick="document.location=''">Check expiration dates</button>
+      <button onclick="document.location=''">Change inventory item</button>
+    </div>
   </body>
 </html>
