--- a/Frontend/productchange.html
+++ b/Frontend/productchange.html
@@ -17,14 +17,14 @@
             <input type="text" id="name" name="name" required>
 
             <label for="price">Price:</label>
-            <input type="number" id="price" name="price" required>
+            <input type="number" id="price" name="price" step="0.01" required>
 
             <label for="stock">Stock:</label>            
             <input type="number" id="stock" name="stock" required>
 
             <label for="date"></label>
             <input type="date" id="date" name="date" required>
-            <input class="submit" type="submit" value="Submit">
+            <input class="submit" id="submitButton" type="submit" value="Submit">
         </form>
     </div>    
 </body>
