--- a/Frontend/homepage.html
+++ b/Frontend/homepage.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">  
       <button onclick="document.location='stock.html'">View products in stock</button>
-      <button onclick="document.location=''">Check expiration dates</button>
+      <button onclick="document.location='expirationCheck.html'">Check expiration dates</button>
       <button onclick="document.location=''">Change inventory item</button>
     </div>
   </body>
