implemented functionality to keep track of expiring products

--- a/Frontend/expirationCheck.html
+++ b/Frontend/expirationCheck.html
@@ -14,6 +14,7 @@
 
         </div>
         <button id="submitButton">Submit</button>
+        <label id="messageLabel"></label>
     </div>    
 </body>
 </html>
