--- a/Frontend/homepage.html
+++ b/Frontend/homepage.html
@@ -11,7 +11,7 @@
     <div class="container">  
       <button onclick="document.location='stock.html'">View products in stock</button>
       <button onclick="document.location='expirationCheck.html'">Check expiration dates</button>
-      <button onclick="document.location='addProduct.html'">Change inventory item</button>
+      <button onclick="document.location='addProduct.html'">Add inventory item</button>
     </div>
   </body>
 </html>
